Con validación de formulario
Se añade validación de formulario a lugar

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,3 +10,11 @@
 @import "../pages/page1/page1";
 
 @import "../pages/page2/page2";
+
+@import "../pages/lugar/lugar";
+
+@import "../pages/lista-lugares/lista-lugares";
+
+.hidden {
+        display: none;
+    }
